--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,6 +6,7 @@ on:
       - main
   schedule:
     - cron: '0 18,10 * * *'
+  workflow_dispatch:
 
 jobs:
   tieba_sign:
@@ -16,10 +17,14 @@ jobs:
       - name: 'Set python'
         uses: actions/setup-python@v1
         with:
-          python-version: '3.6'
+          python-version: '3.10'
       - name: 'Install dependencies'
         run: python -m pip install --upgrade requests
       - name: 'Start Sign'
         env:
           BDUSS: ${{ secrets.BDUSS }}
+          HOST: ${{ secrets.HOST }}
+          FROM: ${{ secrets.FROM }}
+          TO: ${{ secrets.TO }}
+          AUTH: ${{ secrets.AUTH }}
         run: python main.py
